--- a/javascript/apps/taiga/src/app/commons/navigation/navigation-user-dropdown/navigation-user-dropdown.component.css
+++ b/javascript/apps/taiga/src/app/commons/navigation/navigation-user-dropdown/navigation-user-dropdown.component.css
@@ -23,8 +23,8 @@ li {
 
 .user {
   border-bottom: solid 1px var(--color-gray30);
-  margin-bottom: var(--spacing-1);
-  padding-bottom: var(--spacing-2);
+  margin-bottom: var(--spacing-8);
+  padding-bottom: var(--spacing-16);
 
   & .user-inner {
     display: flex;
@@ -36,7 +36,7 @@ li {
     justify-content: center;
     max-width: 100%;
     overflow: hidden;
-    padding-left: var(--spacing-2);
+    padding-left: var(--spacing-16);
 
     & span,
     & a {
@@ -70,7 +70,7 @@ li {
   color: var(--color-gray80);
   display: flex;
   font-weight: var(--font-weight-bold);
-  padding: var(--spacing-1);
+  padding: var(--spacing-8);
 
   &:hover {
     background-color: var(--color-gray20);
@@ -85,6 +85,6 @@ li {
 .sign-out {
   border-top: solid 1px var(--color-gray30);
   color: var(--color-secondary);
-  margin-top: var(--spacing-2);
-  padding-top: var(--spacing-2);
+  margin-top: var(--spacing-16);
+  padding-top: var(--spacing-16);
 }
