--- a/javascript/apps/taiga/src/app/commons/navigation/navigation.component.css
+++ b/javascript/apps/taiga/src/app/commons/navigation/navigation.component.css
@@ -12,7 +12,7 @@ Copyright (c) 2021-present Kaleidos Ventures SL
   display: flex;
   justify-content: space-between;
   min-height: 3rem;
-  padding: 0 var(--spacing-2);
+  padding: 0 var(--spacing-16);
 }
 
 .home-button {
@@ -33,7 +33,7 @@ Copyright (c) 2021-present Kaleidos Ventures SL
   display: flex;
 
   & .actions button {
-    margin-right: var(--spacing-2);
+    margin-right: var(--spacing-16);
 
     &:last-child {
       margin-right: 0;
@@ -44,12 +44,12 @@ Copyright (c) 2021-present Kaleidos Ventures SL
 .separator {
   background: var(--color-gray40);
   height: 28px;
-  margin-left: var(--spacing-2);
+  margin-left: var(--spacing-16);
   width: 1px;
 }
 
 .avatar-holder {
-  padding-left: var(--spacing-2);
+  padding-left: var(--spacing-16);
 }
 
 .avatar-dropdown-button {
